--- a/templates/modals/createDocModal.html
+++ b/templates/modals/createDocModal.html
@@ -1,34 +1,30 @@
-{% extends 'modals/_modal_base.html' %}
-
-{% block modal_id %}
-  createDocModal
-{% endblock %}
-
-{% block modal_title %}
-  <i class="fas fa-plus"></i> 新建文档
-{% endblock %}
-
-{% block modal_size %}
-  modal-lg
-{% endblock %}
-
-{% block modal_body %}
-  <form id="createDocForm">
-    <input type="hidden" id="create_project_id" name="project_id" value="{{ project.id }}" />
-    <div class="mb-3">
-      <label for="docTitle" class="form-label">文档标题</label>
-      <input type="text" class="form-control" id="docTitle" name="docTitle" placeholder="文档标题" required />
-      <div class="form-text">文档标题将作为文件名保存，不要包含特殊字符</div>
+<!-- 新建文档模态框 -->
+<div class="modal fade" id="createDocModal" tabindex="-1" aria-labelledby="createDocModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="createDocModalLabel"><i class="fas fa-plus"></i> 新建文档</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="createDocForm">
+          <input type="hidden" id="create_project_id" name="project_id" value="{{ project.id }}" />
+          <div class="mb-3">
+            <label for="docTitle" class="form-label">文档标题</label>
+            <input type="text" class="form-control" id="docTitle" name="docTitle" placeholder="文档标题" required />
+            <div class="form-text">文档标题将作为文件名保存，不要包含特殊字符</div>
+          </div>
+          <div class="mb-3">
+            <label for="docContent" class="form-label">文档内容</label>
+            <textarea class="form-control" id="docContent" name="docContent" rows="15" placeholder="使用Markdown格式编写文档内容..." required></textarea>
+            <div class="form-text">使用Markdown语法编写文档内容</div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-success" id="createDocBtn">创建</button>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="docContent" class="form-label">文档内容</label>
-      <textarea class="form-control" id="docContent" name="docContent" rows="15" placeholder="使用Markdown格式编写文档内容..." required></textarea>
-      <div class="form-text">使用Markdown语法编写文档内容</div>
-    </div>
-  </form>
-{% endblock %}
-
-{% block modal_footer %}
-  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-  <button type="button" class="btn btn-success" id="createDocBtn">创建</button>
-{% endblock %}
+  </div>
+</div>
