--- a/templates/modals/editDocModal.html
+++ b/templates/modals/editDocModal.html
@@ -1,35 +1,31 @@
-{% extends 'modals/_modal_base.html' %}
-
-{% block modal_id %}
-  editDocModal
-{% endblock %}
-
-{% block modal_title %}
-  <i class="fas fa-edit"></i> 编辑文档
-{% endblock %}
-
-{% block modal_size %}
-  modal-lg
-{% endblock %}
-
-{% block modal_body %}
-  <form id="editDocForm">
-    <input type="hidden" id="edit_project_id" name="project_id" value="{{ project.id }}" />
-    <input type="hidden" id="edit_filename" name="filename" value="{{ filename }}" />
-    <div class="mb-3">
-      <label for="editDocTitle" class="form-label">文档标题</label>
-      <input type="text" class="form-control" id="editDocTitle" name="docTitle" placeholder="文档标题" required />
-      <div class="form-text">修改标题将重命名文件，请谨慎操作</div>
+<!-- 编辑文档模态框 -->
+<div class="modal fade" id="editDocModal" tabindex="-1" aria-labelledby="editDocModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editDocModalLabel"><i class="fas fa-edit"></i> 编辑文档</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="editDocForm">
+          <input type="hidden" id="edit_project_id" name="project_id" value="{{ project.id }}" />
+          <input type="hidden" id="edit_filename" name="filename" value="{{ filename }}" />
+          <div class="mb-3">
+            <label for="editDocTitle" class="form-label">文档标题</label>
+            <input type="text" class="form-control" id="editDocTitle" name="docTitle" placeholder="文档标题" required />
+            <div class="form-text">修改标题将重命名文件，请谨慎操作</div>
+          </div>
+          <div class="mb-3">
+            <label for="editDocContent" class="form-label">文档内容</label>
+            <textarea class="form-control" id="editDocContent" name="docContent" rows="15" placeholder="使用Markdown格式编写文档内容..." required></textarea>
+            <div class="form-text">使用Markdown语法编写文档内容</div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="saveDocBtn">保存</button>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="editDocContent" class="form-label">文档内容</label>
-      <textarea class="form-control" id="editDocContent" name="docContent" rows="15" placeholder="使用Markdown格式编写文档内容..." required></textarea>
-      <div class="form-text">使用Markdown语法编写文档内容</div>
-    </div>
-  </form>
-{% endblock %}
-
-{% block modal_footer %}
-  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-  <button type="button" class="btn btn-primary" id="saveDocBtn">保存</button>
-{% endblock %}
+  </div>
+</div>
