--- a/templates/modals/uploadDocModal.html
+++ b/templates/modals/uploadDocModal.html
@@ -1,34 +1,30 @@
-{% extends 'modals/_modal_base.html' %}
-
-{% block modal_id %}
-  uploadDocModal
-{% endblock %}
-
-{% block modal_title %}
-  <i class="fas fa-upload"></i> 上传文档
-{% endblock %}
-
-{% block modal_size %}
-  modal-lg
-{% endblock %}
-
-{% block modal_body %}
-  <form id="uploadDocForm" enctype="multipart/form-data">
-    <input type="hidden" id="project_id" name="project_id" value="{{ project.id }}" />
-    <div class="mb-3">
-      <label for="docFile" class="form-label">选择Markdown文件</label>
-      <input type="file" class="form-control" id="docFile" name="docFile" accept=".md,.markdown" required />
-      <div class="form-text">请选择Markdown格式的文档文件（.md或.markdown）</div>
+<!-- 上传文档模态框 -->
+<div class="modal fade" id="uploadDocModal" tabindex="-1" aria-labelledby="uploadDocModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="uploadDocModalLabel"><i class="fas fa-upload"></i> 上传文档</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="uploadDocForm" enctype="multipart/form-data">
+          <input type="hidden" id="project_id" name="project_id" value="{{ project.id }}" />
+          <div class="mb-3">
+            <label for="docFile" class="form-label">选择Markdown文件</label>
+            <input type="file" class="form-control" id="docFile" name="docFile" accept=".md,.markdown" required />
+            <div class="form-text">请选择Markdown格式的文档文件（.md或.markdown）</div>
+          </div>
+          <div class="mb-3">
+            <label for="docName" class="form-label">文档名称</label>
+            <input type="text" class="form-control" id="docName" name="docName" placeholder="文档名称（不含扩展名）" required />
+            <div class="form-text">文档名称将作为文件名保存，不要包含特殊字符</div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+        <button type="button" class="btn btn-primary" id="uploadDocBtn">上传</button>
+      </div>
     </div>
-    <div class="mb-3">
-      <label for="docName" class="form-label">文档名称</label>
-      <input type="text" class="form-control" id="docName" name="docName" placeholder="文档名称（不含扩展名）" required />
-      <div class="form-text">文档名称将作为文件名保存，不要包含特殊字符</div>
-    </div>
-  </form>
-{% endblock %}
-
-{% block modal_footer %}
-  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
-  <button type="button" class="btn btn-primary" id="uploadDocBtn">上传</button>
-{% endblock %}
+  </div>
+</div>
