--- a/templates/project_doc_view.html
+++ b/templates/project_doc_view.html
@@ -7,6 +7,9 @@
 {% block required_css %}
   <link href="{{ url_for('static', filename='css/card.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/button.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/modal.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/form.css') }}" rel="stylesheet" />
+  <link href="{{ url_for('static', filename='css/table.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block extra_css %}
